data/derived/fa15/progs/unify/prog0243.ml.out
Characters 264-267:
  | Average(c, d)       -> "(("^exprToString c^"+"^exprToString d^")""/2)"
                                                                  ^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
